<resources>
    <string name="app_name">Appointer for Executors</string>
    <string name="appointments">Appointments</string>
    <string name="services">Services</string>
    <string name="messages">Messages</string>
    <string name="account">Account</string>
    <string name="welcome">Welcome to the</string>
    <string name="appointer">Appointer</string>
    <string name="dont_t_have_an_account_sign_up">Don’t have an account? Sign up.</string>
    <string name="email_address">Email address</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in.</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="verify_your_mail">Verify your mail</string>
    <string name="registration_confirmation">A registration confirmation email has been sent to your email.</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_the_email">Enter the email associated with your account and we’ll send an email with instructions to reset your password.</string>
    <string name="confirm">Confirm</string>
    <string name="email_code">Email code</string>
    <string name="send_instructions">Send Instructions</string>
    <string name="check_your_mail">Check your mail</string>
    <string name="sent_password">We have sent a password recover instructions to your email. Did not receive the email? Check your spam filter, or try another email address.</string>
    <string name="create_new_password">Create new password</string>
    <string name="password_must_be_different">Your new password must be different from previous used passwords.</string>
    <string name="_reset_password">Reset Password</string>
    <string name="must_be_at_least_8_characters">Must be at least 8 characters.</string>
    <string name="both_passwords_must_match">Both passwords must match.</string>
    <string name="quick_appoint">Quick Appoint</string>
    <string name="go_to_dialog">Go To Dialog</string>
    <string name="appointment_page">Appointment Page</string>
    <string name="nothing_for_this_time">Nothing for this time</string>
    <string name="create_appointment">Create Appointment</string>
    <string name="company_name">Company Name</string>
    <string name="email">Email</string>
    <string name="awesomecompany">AwesomeCompany</string>
    <string name="sample_appointerapp_org">sample@appointerapp.org</string>
    <string name="hidden_password">********</string>
    <string name="update_settings">Update Settings</string>
    <string name="your_appointments">Your Appointments</string>
    <string name="your_services">Your Services</string>
    <string name="your_messages">Your Messages</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="edit_service">Edit Service</string>
    <string name="type_your_text">Type your text...</string>
    <string name="appointments_at">Appointments at</string>
    <string name="update_account_information">Update Account Information</string>
    <string name="service_details">Service Details</string>
    <string name="service_appoint">Appoint Service</string>

</resources>