<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:maxLines="1"
        style="@style/accountText"
        android:text="@string/company_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/awesomecompany"
        android:layout_marginTop="3dp"
        android:layout_marginHorizontal="20dp"
        android:singleLine="true"
        android:scrollHorizontally="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:maxLines="1"
        style="@style/accountText"
        android:text="@string/email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:hint="@string/sample_appointerapp_org"
        android:layout_marginHorizontal="20dp"
        android:singleLine="true"
        android:scrollHorizontally="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:maxLines="1"
        style="@style/accountText"
        android:text="@string/password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hidden_password"
        android:layout_marginTop="3dp"
        android:layout_marginHorizontal="20dp"
        android:singleLine="true"
        android:scrollHorizontally="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:maxLines="1"
        style="@style/accountText"
        android:text="@string/confirm_password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginHorizontal="20dp"
        android:singleLine="true"
        android:scrollHorizontally="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/action_button"
        style="@style/ActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/update_settings" />

</androidx.appcompat.widget.LinearLayoutCompat>